--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,25 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,react
 
 .idea
+
+# dependencies
+/client/node_modules
+/client/.pnp
+.pnp.js
+
+# testing
+/client/coverage
+
+# production
+/client/build
+
+# misc
+/client/.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
