--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.41",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "start:dev": "nodemon",
     "build": "rm -rf ./build && tsc",
-    "start": "yarn run build && node build/index.js"
+    "start": "yarn run build && node build/index.js",
+    "start:dev": "nodemon",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "dependencies": {
     "mongodb": "^3.6.6"
