--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -31,5 +31,10 @@
     "resolveJsonModule": true,                      /* Include modules imported with '.json' extension */
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "./build/",
+    "./node_modules/",
+    "./tests/",
+  ]
 }
