--- a/.github/workflows/server-ci-tests.yml
+++ b/.github/workflows/server-ci-tests.yml
@@ -20,9 +20,9 @@ jobs:
         node-version: '12.x'
     - name: Install dependencies
       working-directory: ./server
-      run: | 
-        cp .env.example .env
-        yarn --frozen-lockfile
-        yarn test
+      run: yarn --frozen-lockfile
+    - name: Run Tests
+      working-directory: ./server
+      run: yarn test
         
     
