--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,6 @@
 NODE_ENV=development
 NODE_HOSTNAME=127.0.0.1
-NODE_PORT=3001
+NODE_PORT=3000
+
+MONGO_DATABASE_URL=mongodb://localhost:27017
+MONGO_DATABASE_NAME=ais_project
