--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^4.2.16",
+    "@types/chai-http": "^4.2.0",
     "@types/mocha": "^8.2.2",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.41",
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
@@ -19,7 +21,7 @@
     "build": "rm -rf ./build && tsc",
     "start": "yarn run build && node build/index.js",
     "start:dev": "nodemon",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
+    "test": "env mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "dependencies": {
     "mongodb": "^3.6.6"
