--- a/server/.env.example
+++ b/server/.env.example
@@ -2,5 +2,6 @@ NODE_ENV=development
 NODE_HOSTNAME=127.0.0.1
 NODE_PORT=3000
 
-MONGO_DATABASE_URL=mongodb://localhost:27017
-MONGO_DATABASE_NAME=ais_project
+DATABASE_TYPE=mongo
+DATABASE_URL=mongodb://localhost:27017
+DATABASE_NAME=ais_project
